--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: shrink/actions-document-publish@v1
         id: publish-document
         with:
-          sources: 'EUTC-Constitution.md ProductionGuidelines.md'
+          sources: 'src/*.md'
       - if: github.event_name == 'release' && github.event.action == 'published'
         name: Get Release
         id: release
