--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           upload_url: ${{ steps.release.outputs.upload_url }}
           asset_path: ${{ steps.publish-document.outputs.pdf }}
-          asset_name: 'changes-$TAG_NAME.pdf'
+          asset_name: 'changes- ${{ steps.get_release.outputs.upload_url }} .pdf'
           asset_content_type: application/pdf
